# redis-slack-worker-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.collector  Dockerfile.worker  README.md  docker-compose.collector.yml  docker-compose.yml  env.example  haink.py  otel-collector-config.yaml  pyproject.toml  pytest.ini  settings.py  start.sh
.cursor/rules/: use-uv.mdc
.github/workflows/: evaluate.yml  test.yml
app/: content_storage.py
app/agent/: __init__.py  agent.py  core.py
app/api/: __init__.py  app.py  auth.py  auth_config.py  content_config.py  content_ledger.py  content_storage.py  main.py  slack_app.py
app/etl/: __init__.py  ingestion_queries.py  ledger_manager.py  vectorization_queries.py
app/utilities/: __init__.py  bedrock_client.py  database.py  environment.py  keys.py  logging_config.py  metrics.py  openai_client.py  s3_utils.py  telemetry.py  util.py
app/worker/: __init__.py  __main__.py  task_registration.py  worker.py
docs/: CONTENT_MANAGEMENT.md  ENVIRONMENT_VARIABLES.md  INGESTION_PIPELINE.md  SSL_AUTH0_CONFIGURATION.md
scripts/: bedrock_provision_access.sh  evaluate_agent.py  load_secrets.sh  rebuild-and-push.sh  seed.py  seed_tracking_index.py  show_trends.py
templates/: README.md  content.html  home.html
terraform/: .gitignore  ENVIRONMENT_CONFIGURATION.md  README.md  SECURITY_AND_SETUP.md  SSM_PARAMETERS.md  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
tests/: conftest.py  docker-compose.yml  test_agent_behavior.py  test_bedrock_client.py  test_logging_config.py
tests/data/: agent_behavior_test_cases.json
tests/integration/: test_docket_integration.py  test_glean_integration.py
tests/unit/: test_agent.py  test_app.py  test_content_management.py  test_content_router.py  test_db.py  test_glean_search.py  test_ingestion_queries.py  test_ingestion_tasks.py  test_keys.py  test_tasks.py  (+8 more)
(+49 files in other folders)
